--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v4 # v2 minimum required
       - uses: axel-op/googlejavaformat-action@v4
         with:
+          distribution: 'temurin'
+          java-version: '17' # Or '21'
           args: "--skip-sorting-imports --replace"
           # Recommended if you use MacOS:
           # github-token: ${{ secrets.GITHUB_TOKEN }}
