--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,20 @@ on:
     branches: [ main ]
 
 jobs:
-
   formatting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # v2 minimum required
-      - uses: axel-op/googlejavaformat-action@v4
+      - uses: actions/checkout@v4
+
+      # Setup Java first
+      - name: Setup JDK
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '21'
-          args: "--skip-sorting-imports --replace"
-          # Recommended if you use MacOS:
-          # github-token: ${{ secrets.GITHUB_TOKEN }}
+          distribution: 'temurin'
+
+      # Run the formatter
+      - name: Format Java code
+        uses: axel-op/googlejavaformat-action@v4
+        with:
+          args: "--skip-sorting-imports --replace 'src/**/*.java'"
