--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Format
+name: Format Java Code
 
 on:
   push:
@@ -7,18 +7,26 @@ on:
 jobs:
   formatting:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # Setup Java first
-      - name: Setup JDK
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # required for committing
+
+      - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
           distribution: 'temurin'
+          java-version: '21'
 
-      # Run the formatter
-      - name: Format Java code
+      - name: Run Google Java Format
         uses: axel-op/googlejavaformat-action@v4
         with:
-          args: "--skip-sorting-imports --replace 'src/**/*.java'"
+          args: "--skip-sorting-imports --replace src/**/*.java"
+
+      # - name: Commit and Push Changes
+      #   uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: "Auto-format Java code"
+      #     branch: main
